src/objects/ExportControl__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AssignmentAbroad__c</fullName>
        <description>Will AECOM employees be assigned to work abroad in support of this opportunity or transaction?  If “Yes,” contact AECOM’s Global Mobility Team for international visa requirements.</description>
        <label>Assignment Abroad</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Client_Website__c</fullName>
        <label>Billing Client Website</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientEndUserAgency__c</fullName>
        <description>Is the Client an agency, branch, department or ministry of a government?</description>
        <label>Client End User Agency</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClientEndUserGovtorState__c</fullName>
        <description>Is the Client a government-owned or state-owned business entity?</description>
        <label>Client End User Govt or State</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClientJointVenture__c</fullName>
        <description>Is the Client a joint venture?</description>
        <label>Client Joint Venture</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EcoSystemReferenceNumber__c</fullName>
        <formula>Project__r.pse__Project_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EcoSystem Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUserorClientContactInfo__c</fullName>
        <description>If Yes, provide the name, address and website for each third party</description>
        <label>End User or Client Contact Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndUserorClientDirectHire__c</fullName>
        <description>Will the Ultimate End User or Client directly hire third parties with whom AECOM will need to exchange goods, data or services?</description>
        <label>End User or Client Direct Hire</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Client_Website__c</fullName>
        <description>To store End Client Website and update it&apos;s value in Export Control Object if needed</description>
        <label>End Client Website</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExistingJointVentureInput__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will AECOM be forming or use an existing Joint Venture for this opportunity or transaction?</description>
        <label>Existing Joint Venture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExistingJointVenture__c</fullName>
        <description>Will AECOM be forming or use an existing Joint Venture for this opportunity or transaction?</description>
        <formula>IF( ISPICKVAL(Project__r.clAECOMJointVentureProject__c, &apos;Y&apos;), true, false)</formula>
        <label>Existing Joint Venture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinalDestination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>List the final destination to which goods, services or data AECOM will send (for example, a bridge designed for a project in Singapore – the final destination is Singapore):</description>
        <label>Final Destination</label>
        <referenceTo>ProjectCity__c</referenceTo>
        <relationshipLabel>Export Controls (Final Destination)</relationshipLabel>
        <relationshipName>ExportControlsFinalDest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Destination_Place__c</fullName>
        <label>Final Destination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GeographyApproval__c</fullName>
        <description>Have you obtained Geography approval to proceed with the project in the subject AECOM Geography? If “No,” review Delegation of Authority approval requirements</description>
        <label>Geography Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GoverningLaw__c</fullName>
        <label>Governing Law</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ImmediateReviewDate__c</fullName>
        <label>Immediate Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImportPermanently__c</fullName>
        <description>Will AECOM PERMANENTLY import goods directly or indirectly to an intermediate location or the final destination in support of this transaction?</description>
        <label>Import Permanently</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InternationalTaxDepartmentReview__c</fullName>
        <description>Has AECOM’s International Tax Department reviewed the proposed opportunity or transaction? If “No,” contact AECOM’s Tax Team for international tax guidance.</description>
        <label>International Tax Department Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JointVentureName__c</fullName>
        <description>If Yes, provide the name of the Joint Venture, and identify all parties in addition to AECOM who comprise this Joint Venture</description>
        <label>Joint Venture Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Export Controls</relationshipLabel>
        <relationshipName>ExportControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransChemical__c</fullName>
        <description>Biological, chemical, or nuclear weapons, weapons of mass destruction or remediation of same?</description>
        <label>Oppty or Trans Chemical</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransEmbassy__c</fullName>
        <description>Government embassy or building?</description>
        <label>Oppty or Trans Embassy</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransHospital__c</fullName>
        <description>Biological, chemical or nuclear hospital or laboratory facilities including those for military or civilian hospitals?</description>
        <label>Oppty or Trans Hospital</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransIntelligence__c</fullName>
        <description>Intelligence-gathering, CLASSIFIED or UNCLASSIFIED but sensitive or confidential?</description>
        <label>Oppty or Trans Intelligence</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransMilitary__c</fullName>
        <description>Military, police or prison facilities?</description>
        <label>Oppty or Trans Military</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransNuclear__c</fullName>
        <description>Nuclear energy or research applications?</description>
        <label>Oppty or Trans Nuclear</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransOilandGas__c</fullName>
        <description>Oil &amp; gas refinery, storage or operations of same, including remediation?</description>
        <label>Oppty or Trans Oil and Gas</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransPort__c</fullName>
        <description>Air or ocean port with both civilian AND military features?</description>
        <label>Oppty or Trans Port</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransProtectiveEquip__c</fullName>
        <description>Personal protective equipment?</description>
        <label>Oppty or Trans Protective Equip</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransSecurity__c</fullName>
        <description>Facility security design for government or civilian facility, including air or ocean port?</description>
        <label>Oppty or Trans Security</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransSpace__c</fullName>
        <description>Space, high-altitude equipment, radar equipment or satellites and their ground stations?</description>
        <label>Oppty or Trans Space</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransTerrorism__c</fullName>
        <description>Anti-terrorism, anti-narcotrafficking?</description>
        <label>Oppty or Trans Terrorism</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransUniversity__c</fullName>
        <description>Public or private university projects in support research or studies other than studies of liberal arts?</description>
        <label>Oppty or Trans University</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyOrTransWeapons__c</fullName>
        <description>Conventional weapons and related supplies or accessories?</description>
        <label>Oppty or Trans Weapons</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpptyorTransStatus__c</fullName>
        <description>This opportunity or transaction is</description>
        <formula>TEXT(Project__r.pse__Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty or Trans Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherAECOMLegalEntities__c</fullName>
        <description>List all other AECOM Legal Entities that are/will be participating in this opportunity or transaction:</description>
        <label>Other AECOM Legal Entities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherCountry__c</fullName>
        <label>Other Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerOrSubServices__c</fullName>
        <description>If Yes, briefly describe the goods, services or data each partner or subcontractor will contribute to this opportunity or project.</description>
        <label>Partner or Sub Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PartnerOrSubcontractors__c</fullName>
        <description>Will AECOM use partners or subcontractors?</description>
        <label>Partner or Subcontractors</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartnerorSubContactInfo__c</fullName>
        <description>If Yes, provide the name, address and website for each partner or subcontractor</description>
        <label>Partner or Sub Contact Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectLink__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;QuestionnaireSet__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectLongName__c</fullName>
        <formula>QuestionnaireSet__r.ProjectLongName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Long Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>QuestionnaireSet__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Export Controls</relationshipLabel>
        <relationshipName>ExportControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuestionnaireSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire Set</label>
        <referenceTo>QuestionnaireSet__c</referenceTo>
        <relationshipLabel>Export Controls</relationshipLabel>
        <relationshipName>ExportControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequesterBusinessLine__c</fullName>
        <formula>Owner:User.Business_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterGeography__c</fullName>
        <formula>Owner:User.Geography__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterLegalEntity__c</fullName>
        <description>Requestor’s AECOM Legal Entity, i.e. AECOM Technical Services, AECOM UK Ltd</description>
        <formula>Owner:User.LegalEntity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Legal Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterTelephone__c</fullName>
        <formula>Owner:User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterTitle__c</fullName>
        <formula>Owner:User.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubmitforReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TravelCountries__c</fullName>
        <description>If Yes, list the country or countries of travel</description>
        <label>Travel Countries</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TravelEquipment__c</fullName>
        <description>&quot;If Yes, other than AECOM-assigned laptops, mobile phones or standard data devices, describe any other equipment needed for travel in support of this opportunity or transaction.  If no other equipment, please write “none.” 

If you will be taking AECOM-assigned laptops, mobile phones or standard data devices with you while traveling outside your home country, refer to AECOM IT policies concerning device security requirements and AECOM Corporate Security for international travel requirements including travel safety.&quot;</description>
        <label>Travel Equipment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TravelInternationally__c</fullName>
        <description>Will AECOM stakeholders, including the requestor or project team travel internationally in support of this opportunity or transaction?</description>
        <label>Travel Internationally</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UltimateEndUserAgency__c</fullName>
        <description>Is the Ultimate End User an agency, branch, department or ministry of a government?</description>
        <label>Ultimate End User Agency</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UltimateEndUserContracting__c</fullName>
        <description>Is the Ultimate End User contracting AECOM directly?</description>
        <label>Ultimate End User Contracting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UltimateEndUserGovtorState__c</fullName>
        <description>Is the Ultimate End User a government-owned or state-owned business entity?</description>
        <label>Ultimate End User Govt or State</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UltimateEndUserJointVenture__c</fullName>
        <description>Is the Ultimate End User a joint venture?</description>
        <label>Ultimate End User Joint Venture</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>xxProjectDescription__c</fullName>
        <description>Using plain, layperson language, describe what the project is (i.e. resort development, bridge design, military operational support project, etc.) and what AECOM and its partners or subcontractors do for this opportunity or project (i.e. design a civilian bridge, provide military maintenance and support services, etc.)</description>
        <formula>Project__r.pse__Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Description</label>
        <type>Text</type>
    </fields>
    <label>Export Control</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ExistingJointVenture__c</columns>
        <columns>Project__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EcoExportControlsTeam_ExportControl</fullName>
        <filterScope>Queue</filterScope>
        <label>Export Controls Team</label>
        <queue>EcoExportControlsTeam</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EC-{000000000}</displayFormat>
        <label>Export Control Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Export Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>